Release 12.0.0
Release notes are available at:
https://docs.dremio.com/release-notes/120-release-notes.html

Change-Id: Ib2cbcf9734cce1fd93d6ef6077fe155139954c00